Implement PLDMTOOL infrastructure
This commit does the following:
- Sets up the build infrastructure: creates tool folder along
  with src and inc subfolders and updates configure.ac and
  Makefile.am to use it
- Implements the base infrastructure for the pldmtool: Deciphers
  input arguments and adds usage and debug logging.
- Implements input arguments : input argument for request sending
  interface, debug tracing, pldmtool version, usage and command.
- Implements GetPLDMTypes command via loopback: loopback means that
  the request is created by the tool and send to the libresponder
  to get a response

Change-Id: I45c4ad112ae4a26d595c7a50fe61f685d3a4b9dc
Signed-off-by: Jinu Joy Thomas <jthomas7@in.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,9 @@ AS_IF([test "x$enable_oe_sdk" == "xyes"],
     AC_SUBST([OESDK_TESTCASE_FLAGS], [$testcase_flags])
 )
 
+#subdirectory configure to be run
+AC_CONFIG_SUBDIRS([tool])
+
 # Create configured output
 AC_CONFIG_FILES([Makefile libpldm/Makefile libpldmresponder/Makefile test/Makefile])
 AC_CONFIG_FILES([libpldm/libpldm.pc])
