Implement command handler registration
Implement a way for the PLDM responder library to register handlers for
specific PLDM commands. This is as per the registration scheme
documented in README.md.

Change-Id: Ib2b9d84a4006d10d65590d8a35cd9318e3d46b44
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,9 @@
 SUBDIRS = libpldm libpldmresponder test
+
+sbin_PROGRAMS = pldmd
+pldmd_SOURCES = \
+	pldmd.cpp \
+	registration.cpp
+pldmd_LDADD = \
+	libpldmresponder/libpldmresponder.la
+
