--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,7 +4,8 @@ TESTS = $(check_PROGRAMS)
 
 check_PROGRAMS = \
 	libpldm_base_test \
-	libpldmresponder_base_test
+	libpldmresponder_base_test \
+	registration_test
 
 test_cppflags = \
 	-Igtest \
@@ -31,5 +32,13 @@ libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
 libpldmresponder_base_test_LDFLAGS = $(test_ldflags)
 libpldmresponder_base_test_LDADD = \
 	$(top_builddir)/libpldm/base.o \
-	$(top_builddir)/libpldmresponder/base.o
+	$(top_builddir)/libpldmresponder/base.o \
+	$(top_builddir)/registration.o
 libpldmresponder_base_test_SOURCES = libpldmresponder_base_test.cpp
+
+registration_test_CPPFLAGS = $(test_cppflags)
+registration_test_CXXFLAGS = $(test_cxxflags)
+registration_test_LDFLAGS = $(test_ldflags)
+registration_test_LDADD = \
+	$(top_builddir)/registration.o
+registration_test_SOURCES = registration_test.cpp
