Add libmctp source
The libmctp source included now is based off of
https://github.com/jk-ozlabs/libmctp. This will eventually be replaced
by sourcing libmctp from an openbmc repository, via a bitbake recipe, so
please refrain from a libmctp review on this commit.

The purpose of adding the code now is to get some testing going via a
tool called pldm-requester (WIP, subsequent commits will follow).

Change-Id: I5386ac3f1e4c52e2bf8c8aa020ff9da986dac1fc
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,7 @@ AS_IF([test "x$enable_oe_sdk" == "xyes"],
 )
 
 # Create configured output
-AC_CONFIG_FILES([Makefile libpldm/Makefile libpldmresponder/Makefile test/Makefile])
+AC_CONFIG_FILES([Makefile libpldm/Makefile libpldmresponder/Makefile \
+    libmctp/Makefile test/Makefile])
 AC_CONFIG_FILES([libpldm/libpldm.pc])
 AC_OUTPUT
