--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,10 @@
-SUBDIRS = libpldm libpldmresponder test
+SUBDIRS = libpldm libpldmresponder libmctp test
 
 sbin_PROGRAMS = pldmd
 pldmd_SOURCES = \
 	pldmd.cpp \
 	registration.cpp
 pldmd_LDADD = \
-	libpldmresponder/libpldmresponder.la
+	libpldmresponder/libpldmresponder.la \
+	libmctp/libmctp.la
 
