--- a/libpldm/Makefile.am
+++ b/libpldm/Makefile.am
@@ -1,10 +1,12 @@
 nobase_include_HEADERS = \
-	base.h
+	base.h \
+	bios.h
 
 libpldm_LTLIBRARIES = libpldm.la
 libpldmdir = ${libdir}
 libpldm_la_SOURCES = \
-	base.c
+	base.c \
+	bios.c
 libpldm_la_LDFLAGS = \
         -version-info 1:0:0 -shared
 
