--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,7 +4,9 @@ TESTS = $(check_PROGRAMS)
 
 check_PROGRAMS = \
 	libpldm_base_test \
-	libpldmresponder_base_test
+	libpldm_bios_test \
+	libpldmresponder_base_test \
+	libpldmresponder_bios_formatTime_test
 
 test_cppflags = \
 	-Igtest \
@@ -26,6 +28,23 @@ libpldm_base_test_LDFLAGS = $(test_ldflags)
 libpldm_base_test_LDADD = $(top_builddir)/libpldm/base.o
 libpldm_base_test_SOURCES = libpldm_base_test.cpp
 
+libpldm_bios_test_CPPFLAGS = $(test_cppflags)
+libpldm_bios_test_CXXFLAGS = $(test_cxxflags)
+libpldm_bios_test_LDFLAGS = $(test_ldflags)
+libpldm_bios_test_LDADD = \
+	$(top_builddir)/libpldm/base.o \
+	$(top_builddir)/libpldm/bios.o
+libpldm_bios_test_SOURCES = libpldm_bios_test.cpp
+
+libpldmresponder_bios_formatTime_test_CPPFLAGS = $(test_cppflags)
+libpldmresponder_bios_formatTime_test_CXXFLAGS = $(test_cxxflags)
+libpldmresponder_bios_formatTime_test_LDFLAGS = $(test_ldflags)
+libpldmresponder_bios_formatTime_test_LDADD = \
+	$(top_builddir)/libpldmresponder/utils.o
+libpldmresponder_bios_formatTime_test_SOURCES = \
+	libpldmresponder_bios_formatTime_test.cpp
+	
+
 libpldmresponder_base_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
 libpldmresponder_base_test_LDFLAGS = $(test_ldflags)
@@ -33,3 +52,4 @@ libpldmresponder_base_test_LDADD = \
 	$(top_builddir)/libpldm/base.o \
 	$(top_builddir)/libpldmresponder/base.o
 libpldmresponder_base_test_SOURCES = libpldmresponder_base_test.cpp
+
