pldmd: add support for pldmtool
The pldmtool (code coming in next commit) is a PLDM requester that can
be run on the BMC, to target the responder function of the PLDM daemon
running on the BMC.

The pldmtool and pldmd will talk to each other over MCTP, over the
serial binding. Instead of an actual serial connection, we'll make use
of a couple of fifos (one for pldmtool to send requests to the pldmd,
and the other for pldmd to send responses back; we need two because
fifos are not full duplex), and we will point the fds of these fifos to
libmctp's serial binding.

Support for responding to the pldmtool (creating the fifos, using the
serial binding, etc) are conditionally compiled. You would need to
provide --enable-pldmtool to configure.

Tested: On Witherspoon:
pldmd&
pldmtool getpldmcommands base
completion code : 0
Supported Commands bitfield : 0x30

Change-Id: I0f106554ebba467db23b6b68413c6b0795b56733
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,4 +7,11 @@ pldmd_SOURCES = \
 pldmd_LDADD = \
 	libpldmresponder/libpldmresponder.la \
 	libmctp/libmctp.la
+pldmd_LDFLAGS = \
+	$(SYSTEMD_LIBS)
+pldmd_CXXFLAGS = \
+	$(SYSTEMD_CXXFLAGS)
 
+if PLDMTOOL
+pldmd_SOURCES += pldmtool-receiver.cpp
+endif
