libpldm : add encode/decode for setStateEffecterStates
This commit implements the decode of the request and encode of
the response for the setStateEffecterStates command.

Change-Id: Idc5f1316386dc650564d9859a63fbeade24d82d8
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/libpldm/Makefile.am
+++ b/libpldm/Makefile.am
@@ -1,13 +1,16 @@
 nobase_include_HEADERS = \
 	base.h \
-	pldm_types.h
+	pldm_types.h \
+	platform.h
 
 libpldm_LTLIBRARIES = libpldm.la
 libpldmdir = ${libdir}
 libpldm_la_SOURCES = \
-	base.c
+	base.c \
+	platform.c
 libpldm_la_LDFLAGS = -version-info 1:0:0 -shared
 libpldm_la_CFLAGS = $(CODE_COVERAGE_CFLAGS)
 libpldm_la_LIBADD = $(CODE_COVERAGE_LIBS)
+
 pkgconfiglibdir = ${libdir}/pkgconfig
 pkgconfiglib_DATA = libpldm.pc
