--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,7 +5,9 @@ TESTS = $(check_PROGRAMS)
 check_PROGRAMS = \
 	libpldm_base_test \
 	libpldmresponder_base_test \
-	registration_test
+	registration_test \
+	libpldm_platform_test \
+	libpldmresponder_base_test
 
 test_cppflags = \
 	-Igtest \
@@ -26,6 +28,13 @@ libpldm_base_test_CXXFLAGS = $(test_cxxflags)
 libpldm_base_test_LDFLAGS = $(test_ldflags)
 libpldm_base_test_LDADD = $(top_builddir)/libpldm/base.o
 libpldm_base_test_SOURCES = libpldm_base_test.cpp
+
+libpldm_platform_test_CPPFLAGS = $(test_cppflags)
+libpldm_platform_test_CXXFLAGS = $(test_cxxflags)
+libpldm_platform_test_LDFLAGS = $(test_ldflags)
+libpldm_platform_test_LDADD = $(top_builddir)/libpldm/platform.o \
+                              $(top_builddir)/libpldm/base.o
+libpldm_platform_test_SOURCES = libpldm_platform_test.cpp
 
 libpldmresponder_base_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
