libpldm : add encode/decode for setStateEffecterStates
This commit implements the decode of the request and encode of
the response for the setStateEffecterStates command.

Change-Id: Idc5f1316386dc650564d9859a63fbeade24d82d8
Signed-off-by: Sampa Misra <sampmisr@in.ibm.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,37 +1,50 @@
 AM_CPPFLAGS = -I$(top_srcdir) $(CODE_COVERAGE_CPPFLAGS)
 
-TESTS = $(check_PROGRAMS)
+                  TESTS = $(check_PROGRAMS)
 
-check_PROGRAMS = \
-	libpldm_base_test \
-	libpldmresponder_base_test
+    check_PROGRAMS = libpldm_base_test libpldm_platform_test libpldmresponder_base_test
 
-test_cppflags = \
-	-Igtest \
-	$(GTEST_CPPFLAGS) \
-	$(AM_CPPFLAGS)
+        test_cppflags = -Igtest $(GTEST_CPPFLAGS) $(AM_CPPFLAGS)
 
-test_cxxflags = \
-	$(PTHREAD_CFLAGS) \
-	$(CODE_COVERAGE_CXXFLAGS)
+                            test_cxxflags = $(PTHREAD_CFLAGS) $(
+            CODE_COVERAGE_CXXFLAGS)
 
-test_ldflags = \
-	-lgtest_main \
-	-lgtest \
-	$(PTHREAD_LIBS) \
-	$(OESDK_TESTCASE_FLAGS)
+            test_ldflags =
+                -lgtest_main - lgtest $(PTHREAD_LIBS) $(OESDK_TESTCASE_FLAGS)
 
-libpldm_base_test_CPPFLAGS = $(test_cppflags)
-libpldm_base_test_CXXFLAGS = $(test_cxxflags)
-libpldm_base_test_LDFLAGS = $(test_ldflags)
-libpldm_base_test_LDADD = $(top_builddir)/libpldm/libpldm_la-base.o $(CODE_COVERAGE_LIBS)
-libpldm_base_test_SOURCES = libpldm_base_test.cpp
+                                   libpldm_base_test_CPPFLAGS = $(
+                    test_cppflags) libpldm_base_test_CXXFLAGS =
+                    $(test_cxxflags) libpldm_base_test_LDFLAGS = $(
+                        test_ldflags) libpldm_base_test_LDADD =
+                        $(top_builddir) / libpldm / libpldm_la -
+                        base.o $(CODE_COVERAGE_LIBS)
+                            libpldm_base_test_SOURCES = libpldm_base_test.cpp
 
-libpldmresponder_base_test_CPPFLAGS = $(test_cppflags)
-libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
-libpldmresponder_base_test_LDFLAGS = $(test_ldflags)
-libpldmresponder_base_test_LDADD = \
-	$(top_builddir)/libpldm/libpldm_la-base.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-base.o $(CODE_COVERAGE_LIBS)
+                                                            libpldm_platform_test_CPPFLAGS = $(
+                            test_cppflags) libpldm_platform_test_CXXFLAGS =
+                            $(test_cxxflags) libpldm_platform_test_LDFLAGS = $(
+                                test_ldflags) libpldm_platform_test_LDADD =
+                                $(top_builddir) / libpldm / libpldm_la -
+                                platform.o $(top_builddir) / libpldm /
+                                    libpldm_la -
+                                base.o $(CODE_COVERAGE_LIBS)
+                                    libpldm_platform_test_SOURCES =
+                                    libpldm_platform_test.cpp
 
-libpldmresponder_base_test_SOURCES = libpldmresponder_base_test.cpp
+                                        libpldmresponder_base_test_CPPFLAGS = $(
+                                        test_cppflags)
+                                        libpldmresponder_base_test_CXXFLAGS = $(
+                                            test_cxxflags)
+                                            libpldmresponder_base_test_LDFLAGS = $(
+                                                test_ldflags)
+                                                libpldmresponder_base_test_LDADD =
+                                                    $(top_builddir) / libpldm /
+                                                        libpldm_la -
+                                                    base.o $(top_builddir) /
+                                                        libpldmresponder /
+                                                        libpldmresponder_la -
+                                                    base.o $(CODE_COVERAGE_LIBS)
+
+                                                        libpldmresponder_base_test_SOURCES =
+                                                        libpldmresponder_base_test
+                                                            .cpp
