Implement PLDMTOOL infrastructure
This commit does the following:
- Sets up the build infrastructure: creates tool folder along
  with src and inc subfolders and updates configure.ac and
  Makefile.am to use it
- Implements the base infrastructure for the pldmtool: Deciphers
  input arguments and adds usage and debug logging.
- Implements input arguments : input argument for request sending
  interface, debug tracing, pldmtool version, usage and command.
- Implements GetPLDMTypes command via loopback: loopback means that
  the request is created by the tool and send to the libresponder
  to get a response

Change-Id: I45c4ad112ae4a26d595c7a50fe61f685d3a4b9dc
Signed-off-by: Jinu Joy Thomas <jinu.joy.thomas@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = libpldm libpldmresponder libmctp test
+SUBDIRS = libpldm libpldmresponder libmctp test tool
 
 sbin_PROGRAMS = pldmd
 pldmd_SOURCES = \
