--- a/tool/Makefile.am
+++ b/tool/Makefile.am
@@ -1,7 +1,1 @@
-sbin_PROGRAMS = pldmtool
-
-pldmtool_SOURCES = \
-	pldmtool.cpp
-pldmtool_LDADD = \
-	../libmctp/libmctp.la \
-	../libpldm/libpldm.la
+SUBDIRS = src
