--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,8 @@ check_PROGRAMS = \
 	libpldmresponder_base_test \
 	registration_test \
 	libpldm_platform_test \
-	libpldmresponder_base_test
+	libpldmresponder_base_test \
+	libpldmresponder_platform_test
 
 test_cppflags = \
 	-Igtest \
@@ -44,6 +45,16 @@ libpldmresponder_base_test_LDADD = \
 	$(top_builddir)/libpldmresponder/base.o \
 	$(top_builddir)/registration.o
 libpldmresponder_base_test_SOURCES = libpldmresponder_base_test.cpp
+
+libpldmresponder_platform_test_CPPFLAGS = $(test_cppflags)
+libpldmresponder_platform_test_CXXFLAGS = $(test_cxxflags)
+libpldmresponder_platform_test_LDFLAGS = $(test_ldflags)
+libpldmresponder_platform_test_LDADD = \
+	$(top_builddir)/libpldm/base.o \
+	$(top_builddir)/libpldm/platform.o \
+	$(top_builddir)/registration.o \
+	$(top_builddir)/libpldmresponder/platform.o
+libpldmresponder_platform_test_SOURCES = libpldmresponder_platform_test.cpp
 
 registration_test_CPPFLAGS = $(test_cppflags)
 registration_test_CXXFLAGS = $(test_cxxflags)
