WIP : PLDM/MCTP/ASTLPC daemon
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/libmctp/Makefile.am
+++ b/libmctp/Makefile.am
@@ -4,6 +4,7 @@ libmctp_LTLIBRARIES = libmctp.la
 libmctpdir = ${libdir}
 libmctp_la_SOURCES = \
 	serial.c \
+	astlpc.c \
 	alloc.c \
 	core.c
 libmctp_la_LDFLAGS = -static
