--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,13 @@
 SUBDIRS = libpldm libpldmresponder libmctp test
 
 sbin_PROGRAMS = pldmd
-pldmd_SOURCES = \
-	pldmd.cpp \
-	registration.cpp
 pldmd_LDADD = \
 	libpldmresponder/libpldmresponder.la \
 	libmctp/libmctp.la
+pldmd_SOURCES = \
+	pldmd.cpp \
+	registration.cpp \
+	mctp-lpc-setup.cpp
 pldmd_LDFLAGS = \
 	$(SYSTEMD_LIBS)
 pldmd_CXXFLAGS = \
