Measure code coverage for the test cases
Code coverage checks for the degree to which the source code of the program is tested. This patch does the coverage for all of the files in the repo when running the test cases.

Add code coverage flags
‘AX_CODE_COVERAGE()’ defines CODE_COVERAGE_CPPFLAGS, CODE_COVERAGE_CFLAGS, CODE_COVERAGE_CXXFLAGS and CODE_COVERAGE_LIBS which should be included in the CPPFLAGS, CFLAGS CXXFLAGS and LIBS/LIBADD variables of every build target (program or library) which should be built with code coverage support.

Add .lcovrc file
lcovrc file contains configuration information for lcov code coverage tool.

Enable code coverage
‘./configure --enable-code-coverage’

Buid and run
‘make check-code-coverage’ . This generates the lcov report in html format.

Signed-off-by: Priyanga <priyram1@in.ibm.com>
Change-Id: I36a9b501c441ef25595808ce77fc1ca36c1ac323

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,19 @@ AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign dist-xz])
 AM_SILENT_RULES([yes])
 
+# Make sure the default CFLAGS of `-O2 -g` don't override CODE_COVERAGE_CFLAGS
+# It is important that this comes before AC_PROG_C{C,XX}, as we are attempting
+# to stop them from populating default CFLAGS and CXXFLAGS.
+#AS_IF([test "x$enable_tests" = "xno"], [enable_code_coverage=no])
+AS_IF([test "x$enable_code_coverage" != "xno"], [
+    AS_IF([test "x${CXXFLAGS+set}" != "xset"], [
+        AC_SUBST(CXXFLAGS, [""])
+    ])
+    AS_IF([test "x${CFLAGS+set}" != "xset"], [
+        AC_SUBST(CFLAGS, [""])
+    ])
+])
+
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
@@ -19,6 +32,14 @@ AX_APPEND_COMPILE_FLAGS([-Wall -Werror], [CXXFLAGS])
 
 # For linking
 LT_INIT
+
+# Code coverage
+AX_CODE_COVERAGE
+AM_EXTRA_RECURSIVE_TARGETS([check-code-coverage])
+m4_ifdef([_AX_CODE_COVERAGE_RULES],
+    [AM_CONDITIONAL(AUTOCONF_CODE_COVERAGE_2019_01_06, [true])],
+    [AM_CONDITIONAL(AUTOCONF_CODE_COVERAGE_2019_01_06, [false])])
+AX_ADD_AM_MACRO_STATIC([])
 
 # Check/set gtest specific functions.
 AX_PTHREAD([GTEST_CPPFLAGS="-DGTEST_HAS_PTHREAD=1"],[GTEST_CPPFLAGS="-DGTEST_HAS_PTHREAD=0"])
