Enable code coverage: './configure --enable-code-coverage'
Buid and run:
'make check-code-coverage'

Tested:
Verified that 'make check-code-coverage' generates html report.

Signed-off-by: Priyanga <priyram1@in.ibm.com>
Change-Id: I36a9b501c441ef25595808ce77fc1ca36c1ac323

--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -3,6 +3,10 @@ libpldmresponderdir = ${libdir}
 libpldmresponder_la_SOURCES = \
 	base.cpp
 libpldmresponder_la_LIBADD = \
-	../libpldm/libpldm.la
+	../libpldm/libpldm.la \
+	$(CODE_COVERAGE_LIBS)
 libpldmresponder_la_LDFLAGS = \
 	-version-info 1:0:0 -shared
+libpldmresponder_la_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
+libpldmresponder_la_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
+
