Implement the responder for ReadFileIntoMemory
Change-Id: I07bc79bbed7e7a020010a425df4acd51acf1bb0d
Signed-off-by: Tom Joseph <tomjoseph@in.ibm.com>

--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -1,7 +1,8 @@
 libpldmresponder_LTLIBRARIES = libpldmresponder.la
 libpldmresponderdir = ${libdir}
 libpldmresponder_la_SOURCES = \
-	base.cpp
+	base.cpp \
+        file_io.cpp
 libpldmresponder_la_LIBADD = \
 	../libpldm/libpldm.la
 libpldmresponder_la_LDFLAGS = \
