Add include path
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -1,3 +1,4 @@
+AM_CPPFLAGS = -I$(top_srcdir)
 libpldmresponder_LTLIBRARIES = libpldmresponder.la
 libpldmresponderdir = ${libdir}
 libpldmresponder_la_SOURCES = \
