Makefiles: fixups and minor improvemens
Change-Id: I9fb85f56900519478e3c777901beea1ed4af2b5f
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -27,7 +27,9 @@ test_ldflags = \
 libpldm_base_test_CPPFLAGS = $(test_cppflags)
 libpldm_base_test_CXXFLAGS = $(test_cxxflags)
 libpldm_base_test_LDFLAGS = $(test_ldflags)
-libpldm_base_test_LDADD = $(top_builddir)/libpldm/libpldm_la-base.o $(CODE_COVERAGE_LIBS)
+libpldm_base_test_LDADD = \
+	$(top_builddir)/libpldm/libpldm_la-base.o \
+	$(CODE_COVERAGE_LIBS)
 libpldm_base_test_SOURCES = libpldm_base_test.cpp
 
 libpldm_platform_test_CPPFLAGS = $(test_cppflags)
@@ -50,13 +52,16 @@ libpldm_bios_test_SOURCES = libpldm_bios_test.cpp
 
 libpldmresponder_bios_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_bios_test_CXXFLAGS = $(test_cxxflags)
-libpldmresponder_bios_test_LDFLAGS = $(test_ldflags) $(SDBUSPLUS_LIBS)
+libpldmresponder_bios_test_LDFLAGS = \
+	$(test_ldflags) \
+	$(SDBUSPLUS_LIBS)
 libpldmresponder_bios_test_LDADD = \
 	$(top_builddir)/libpldmresponder/libpldmresponder_la-bios.o \
 	$(top_builddir)/libpldmresponder/libpldmresponder_la-utils.o \
 	$(top_builddir)/libpldm/libpldm_la-base.o  \
 	$(top_builddir)/libpldm/libpldm_la-bios.o \
-	$(CODE_COVERAGE_LIBS) $(SDBUSPLUS_LIBS)
+	$(CODE_COVERAGE_LIBS) \
+	$(SDBUSPLUS_LIBS)
 libpldmresponder_bios_test_SOURCES = \
 	libpldmresponder_bios_test.cpp
 
@@ -66,7 +71,7 @@ libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
 libpldmresponder_base_test_LDFLAGS = $(test_ldflags)
 libpldmresponder_base_test_LDADD = \
 	$(top_builddir)/libpldm/libpldm_la-base.o \
-	$(top_builddir)/libpldmresponder/libpldmresponder_la-base.o $(CODE_COVERAGE_LIBS)
+	$(top_builddir)/libpldmresponder/libpldmresponder_la-base.o \
+	$(CODE_COVERAGE_LIBS)
 
 libpldmresponder_base_test_SOURCES = libpldmresponder_base_test.cpp
-
