--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -8,11 +8,12 @@ libpldmresponder_la_LIBADD = \
 	../libpldm/libpldm.la \
 	$(CODE_COVERAGE_LIBS)
 libpldmresponder_la_LDFLAGS = \
-	$(SDBUSPLUS_LIBS)
+	$(SDBUSPLUS_LIBS) \
 	-version-info 1:0:0 -shared
-libpldmresponder_la_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS) \
+libpldmresponder_la_CXXFLAGS = \
+	$(CODE_COVERAGE_CXXFLAGS) \
 	$(SDBUSPLUS_CFLAGS)
- 
+
 libpldmresponder_la_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
 
 
