Fixup merge issues with PR #5
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,9 +7,9 @@ check_PROGRAMS = \
 	libpldm_platform_test \
 	libpldmresponder_base_test \
 	libpldm_bios_test \
-	libpldmresponder_bios_test
+	libpldmresponder_bios_test \
 	registration_test \
-  libpldm_fileio_test \
+	libpldm_fileio_test \
 	libpldmresponder_platform_test
   
 test_cppflags = \
@@ -66,16 +66,10 @@ libpldmresponder_bios_test_SOURCES = \
 libpldm_fileio_test_CPPFLAGS = $(test_cppflags)
 libpldm_fileio_test_CXXFLAGS = $(test_cxxflags)
 libpldm_fileio_test_LDFLAGS = $(test_ldflags)
-libpldm_fileio_test_LDADD = $(top_builddir)/libpldm/base.o \
-                            $(top_builddir)/libpldm/file_io.o
+libpldm_fileio_test_LDADD = \
+	$(top_builddir)/libpldm/libpldm_la-base.o \
+	$(top_builddir)/libpldm/libpldm_la-file_io.o
 libpldm_fileio_test_SOURCES = libpldm_fileio_test.cpp
-
-libpldm_platform_test_CPPFLAGS = $(test_cppflags)
-libpldm_platform_test_CXXFLAGS = $(test_cxxflags)
-libpldm_platform_test_LDFLAGS = $(test_ldflags)
-libpldm_platform_test_LDADD = $(top_builddir)/libpldm/platform.o \
-                              $(top_builddir)/libpldm/base.o
-libpldm_platform_test_SOURCES = libpldm_platform_test.cpp
 
 libpldmresponder_base_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_base_test_CXXFLAGS = $(test_cxxflags)
@@ -91,10 +85,10 @@ libpldmresponder_platform_test_CPPFLAGS = $(test_cppflags)
 libpldmresponder_platform_test_CXXFLAGS = $(test_cxxflags)
 libpldmresponder_platform_test_LDFLAGS = $(test_ldflags)
 libpldmresponder_platform_test_LDADD = \
-	$(top_builddir)/libpldm/base.o \
-	$(top_builddir)/libpldm/platform.o \
+	$(top_builddir)/libpldm/libpldm_la-base.o \
+	$(top_builddir)/libpldm/libpldm_la-platform.o \
 	$(top_builddir)/registration.o \
-	$(top_builddir)/libpldmresponder/platform.o
+	$(top_builddir)/libpldmresponder/libpldmresponder_la-platform.o
 libpldmresponder_platform_test_SOURCES = libpldmresponder_platform_test.cpp
 
 registration_test_CPPFLAGS = $(test_cppflags)
