--- a/libpldm/Makefile.am
+++ b/libpldm/Makefile.am
@@ -2,8 +2,8 @@ nobase_include_HEADERS = \
 	base.h \
 	pldm_types.h \
 	platform.h \
-	bios.h
-  file_io.h
+	bios.h \
+	file_io.h
 
 libpldm_LTLIBRARIES = libpldm.la
 libpldmdir = ${libdir}
@@ -11,7 +11,7 @@ libpldm_la_SOURCES = \
 	base.c \
 	platform.c \
 	bios.c \
-  file_io.c
+	file_io.c
 libpldm_la_LDFLAGS = -version-info 1:0:0 -shared
 libpldm_la_CFLAGS = $(CODE_COVERAGE_CFLAGS)
 libpldm_la_LIBADD = $(CODE_COVERAGE_LIBS)
