--- a/libpldmresponder/Makefile.am
+++ b/libpldmresponder/Makefile.am
@@ -4,8 +4,8 @@ libpldmresponderdir = ${libdir}
 libpldmresponder_la_SOURCES = \
 	base.cpp \
 	utils.cpp \
-	bios.cpp
-  file_io.cpp \
+	bios.cpp \
+	file_io.cpp \
 	platform.cpp
 
 libpldmresponder_la_LIBADD = \
@@ -13,6 +13,7 @@ libpldmresponder_la_LIBADD = \
 	$(CODE_COVERAGE_LIBS)
 libpldmresponder_la_LDFLAGS = \
 	$(SDBUSPLUS_LIBS) \
+	-lstdc++fs \
 	-version-info 1:0:0 -shared
 libpldmresponder_la_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS) \
 	$(SDBUSPLUS_CFLAGS)
