libpldmresponder: implement handler for GetPDR
This commit implements the GetPDR command as defined in DSP0248 v1.1.1.
Multipart PDR transfers are still not implemented.

Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>
Change-Id: Ic520a914e8228b723521151f4ba1eed947179047

--- a/meson.build
+++ b/meson.build
@@ -16,6 +16,7 @@ add_project_arguments('-Wno-psabi', language: 'cpp')
 conf_data = configuration_data()
 conf_data.set_quoted('BIOS_JSONS_DIR', '/etc/default/obmc/pldm/bios')
 conf_data.set_quoted('BIOS_TABLES_DIR', '/var/lib/pldm/bios')
+conf_data.set_quoted('PDR_JSONS_DIR', '/etc/default/obmc/pldm/pdr')
 if get_option('oem-ibm').enabled()
   conf_data.set_quoted('FILE_TABLE_JSON', '/etc/default/obmc/pldm/fileTable.json')
   add_global_arguments('-DOEM_IBM', language : 'c')
